fix styles into size fotter images and letter spacing

--- a/src/components/FooterImagesBar/styles.css
+++ b/src/components/FooterImagesBar/styles.css
@@ -1,4 +1,4 @@
-.images-bar {
+.images-footer-bar {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -7,7 +7,11 @@
 }
 
 @media screen and (max-width: 500px) {
-  .images-bar {
+  .images-footer-bar {
     margin-block: 20px;
+  }
+
+  .images-footer-bar .image img {
+    width: 150px;
   }
 }
