--- a/src/components/GovernorBar/styles.css
+++ b/src/components/GovernorBar/styles.css
@@ -38,7 +38,7 @@
   }
 
   .governor-bar__title {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   .governor-bar__separator {
@@ -46,6 +46,6 @@
   }
 
   .governor-bar__subtitle {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
