--- a/src/components/MainText/styles.css
+++ b/src/components/MainText/styles.css
@@ -23,7 +23,8 @@
 
 .main-text__subtitle {
   font-size: 2.5rem;
-  margin-block-start: 10px;
+  margin-block: 10px;
+  margin-block-end: 20px;
   padding: 0;
   color: var(--orange-color);
 }
